[package]
name = "bounty-server"
version = "0.1.0"
authors = ["Alex Koz. <ak@akropolis.io>"]
edition = "2018"


[dependencies]
actix = "0.8"
r2d2 = "0.8.4" # reshared by diesel
diesel = { version = "1.4.2", features = [ "sqlite", "r2d2" ] }
# diesel = { version = "1.4.2", features = [ "sqlite" ] }
actix-web = {version = "1.0.0", features = [ "ssl" ] }
actix-cors = "0.1.0"
# actix-web = "0.7"
pretty_env_logger = "0.3.0"
failure = "0.1.5"
serde = { version = "1.0.92", features = [ "derive" ] }
serde_json = "1.0.39"
json = "*"
bytes = "0.4"
futures = "0.1.27"
dotenv = "0.14.1"
env_logger = "0.6.1"
log = "0.4.6"
once_cell = "0.1.8"
url = "1.7.2"
num-format = "0.4.0"

[features]
default = [
	# "sqlite",
	"postgres",
	"dbpool",
]
dbpool = ["diesel/r2d2"]
sqlite = ["diesel/sqlite"]
postgres = ["diesel/postgres"]
