[package]
name = "bounty-server"
version = "0.1.0"
authors = ["Alex Koz. <ak@akropolis.io>"]
edition = "2018"

[dependencies]
actix = "0.8"
r2d2 = "0.8.4" # reshared by diesel
chrono = "0.4.7"
jsonwebtoken = "6.0.1"
lazy_static = "1.3.0"
uuid = { version = "0.7.4", features = [ "v4" ] }
rand = "0.7.0"
diesel = { version = "1.4.2", features = [ "sqlite", "r2d2", "chrono" ] }
actix-web = {version = "1.0.0", features = [ "ssl" ] }
actix-cors = "0.1.0"
pretty_env_logger = "0.3.0"
failure = "0.1.5"
serde = { version = "1.0.92", features = [ "derive" ] }
serde_json = "1.0.39"
json = "*"
bytes = "0.4"
futures = "0.1.27"
dotenv = "0.14.1"
env_logger = "0.6.1"
log = "0.4.6"
once_cell = "0.1.8"
url = "1.7.2"
num-format = "0.4.0"

[features]
default = [
	# "sqlite",
	"postgres",
	"dbpool",
]
dbpool = ["diesel/r2d2"]
sqlite = ["diesel/sqlite"]
postgres = ["diesel/postgres"]
